src/core/snapshots/writ__index__tests__parents_after_entry_2.snap
---
source: src/index.rs
expression: actual

---
{
    "dir_1": {
        "dir_1/dir_2/second_level",
        "dir_1/dir_3/second_level",
    },
    "dir_1/dir_2": {
        "dir_1/dir_2/second_level",
    },
    "dir_1/dir_3": {
        "dir_1/dir_3/second_level",
    },
}
